# onaprofile

./: .gitignore  CMakeLists.txt  README  SAMPLECONFIG  main.cpp  onaprofile.cpp  onaprofile.h  onaprofile.kdev4
misc/archlinux/: PKGBUILD
resources/: onaprofile.qrc  selectprofilesdlg.ui
sources/: main.cpp  profile.cpp  profile.hpp  selectprofilesdlg.cpp  selectprofilesdlg.hpp
